--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.48.1",
+    "@material-ui/icons": "^4.11.2",
     "@microsoft/sp-core-library": "1.11.0",
     "@microsoft/sp-lodash-subset": "1.11.0",
     "@microsoft/sp-office-ui-fabric-core": "1.11.0",
@@ -21,7 +22,11 @@
     "@microsoft/sp-webpart-base": "1.11.0",
     "@pnp/graph": "^2.11.0",
     "@pnp/sp": "^2.11.0",
+    "@pnp/spfx-controls-react": "^3.5.0",
+    "jspdf": "^2.5.0",
+    "jspdf-autotable": "^3.5.23",
     "office-ui-fabric-react": "6.214.0",
+    "office-ui-fabric-react-pagination": "0.0.8",
     "react": "16.8.5",
     "react-dom": "16.8.5"
   },
