--- a/src/webparts/nonWellsFargoQuoteForm/NonWellsFargoQuoteFormWebPart.manifest.json
+++ b/src/webparts/nonWellsFargoQuoteForm/NonWellsFargoQuoteFormWebPart.manifest.json
@@ -3,7 +3,7 @@
   "id": "18fdadc8-79fd-4767-8941-dc8da74f6e84",
   "alias": "NonWellsFargoQuoteFormWebPart",
   "componentType": "WebPart",
-
+  "supportsFullBleed": true,
   // The "*" signifies that the version should be taken from the package.json
   "version": "*",
   "manifestVersion": 2,
@@ -12,7 +12,7 @@
   // Components that allow authors to embed arbitrary script code should set this to true.
   // https://support.office.com/en-us/article/Turn-scripting-capabilities-on-or-off-1f2c515f-5d7e-448a-9fd7-835da935584f
   "requiresCustomScript": false,
-  "supportedHosts": ["SharePointWebPart"],
+  "supportedHosts": ["SharePointWebPart","SharePointFullPage"],
 
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
